--- a/pkg/admin/gui/front_end/html/home_page.html
+++ b/pkg/admin/gui/front_end/html/home_page.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<head>
-    <title>Accueil</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="/webui/static/css/home_page.css">
-</head>
-<body class="bg-light">
-    <div class="container py-4">
+{{ define "head" }}
+<link rel="stylesheet" href="/webui/static/css/home_page.css">
+{{ end }}
+
+{{ define "content" }}
       <h2>Accueil</h2>
         <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
       <div class="row g-3 mb-4">
@@ -130,7 +126,9 @@
             </div>
           </a>
         </div>
-      </div>
-    </div>
-</body>
-</html>
+</div>
+{{ end }}
+
+{{ define "home_page" }}
+  {{ template "index" . }}
+{{ end }}
