--- a/pkg/admin/gui/front_end/html/header.html
+++ b/pkg/admin/gui/front_end/html/header.html
@@ -6,12 +6,12 @@
   .nav-pills .nav-link.text-white:hover,
   .nav-pills .nav-link.text-white:focus {
     background-color: #fff;
-    color: #f75433 !important;
+    color: #f54b15 !important;
     transition: background 0.2s, color 0.2s;
     border-radius: 17px;
   }
 </style>
-  <header class="py-2 mb-4 border-bottom" style="background-color: #f75433 !important;">
+  <header class="py-2 mb-4 border-bottom" style="background-color: #f54b15 !important;">
     <div class="container d-flex w-100 align-items-center justify-content-between">
       <a href="home" class="d-flex align-items-center text-decoration-none text-white">
         <img src="/webui/static/assets/waarp_logo_white.png" alt="Logo" class="me-3" style="height:40px; width:auto;">
