--- a/pkg/admin/gui/front_end/html/login_page.html
+++ b/pkg/admin/gui/front_end/html/login_page.html
@@ -3,12 +3,26 @@
   <head>
     <title>{{ .Title }}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
-  </head>
+    <link rel="stylesheet" href="/webui/static/css/login_page.css">
+</head>
 
-  <body class="bg-light">
+  <body class="bg-light d-flex flex-column justify-content-center" style="min-height: 100vh;">
     <div class="container">
-      <h2 class="text-center mb-4">Se connecter</h2>
+      <div class="text-center mb-3">
+        <img src="/webui/static/assets/waarp_logo.png" alt="Logo" style="max-width: 12%">
+      </div>
+      <h2 class="text-center mb-3">Se connecter</h2>
+      <form method="POST" action="login" class="mx-auto" style="max-width: 30%;">
+        <div class="mb-3">
+          <label for="username" class="form-label">Nom d'utilisateur</label>
+          <input type="text" class="form-control" id="username" name="username" required autofocus>
+        </div>
+        <div class="mb-3">
+          <label for="password" class="form-label">Mot de passe</label>
+          <input type="password" class="form-control" id="password" name="password" required>
+        </div>
+        <button type="submit" class="btn btn-connexion w-100">Connexion</button>
+      </form>
     </div>
   </body>
 </html>
