feat/add logout (with button)

--- a/pkg/admin/gui/front_end/html/header.html
+++ b/pkg/admin/gui/front_end/html/header.html
@@ -26,6 +26,7 @@
       <ul class="nav nav-pills">
         <li class="nav-item"><a href="home" class="nav-link text-white d-flex align-items-center"><i class="bi bi-person-fill fs-6 me-2"></i>Utilisateur</a></li>
         <li class="nav-item"><a href="home" class="nav-link text-white">À propos</a></li>
+        <li class="nav-item"><a href="logout" class="nav-link text-white">Déconnexion</a></li>
       </ul>
     </div>
   </header>
