feat/aff forgot password link

--- a/pkg/admin/gui/front_end/html/login_page.html
+++ b/pkg/admin/gui/front_end/html/login_page.html
@@ -22,6 +22,9 @@
           <input type="password" class="form-control" id="password" name="password" required>
         </div>
         <button type="submit" class="btn btn-connexion w-100">Connexion</button>
+        <div class="text-center mt-3">
+          <a href="forgot-password" class="forgot-link text-decoration-none text-body fw-semibold">Mot de passe oublié ?</a>
+        </div>
       </form>
     </div>
   </body>
