feat/add browser language detection with accept language and cookie to assign a language at a user

--- a/pkg/admin/gui/front_end/html/login_page.html
+++ b/pkg/admin/gui/front_end/html/login_page.html
@@ -7,6 +7,7 @@
 </head>
 
   <body class="bg-light d-flex flex-column justify-content-center" style="min-height: 100vh;">
+    {{ template "multi_language" . }}
     <div class="container">
       <div class="text-center mb-3">
         <img src="/webui/static/assets/LOGO_BLACK_WAARP_Banner.png" alt="Logo" style="max-width: 20%">
