--- a/pkg/admin/gui/front_end/html/login_page.html
+++ b/pkg/admin/gui/front_end/html/login_page.html
@@ -1,7 +1,7 @@
 {{ define "login_page" }}
 <!DOCTYPE html>
   <head>
-    <title>{{ .Title }}</title>
+    <title>{{ index .tab "title" }}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/webui/static/css/login_page.css">
 </head>
@@ -12,24 +12,24 @@
       <div class="text-center mb-3">
         <img src="/webui/static/assets/LOGO_BLACK_WAARP_Banner.png" alt="Logo" style="max-width: 20%">
       </div>
-      <h2 class="text-center mb-3">Se connecter</h2>
+      <h2 class="text-center mb-3">{{ index .tab "title" }}</h2>
       <form method="POST" action="login" class="mx-auto" style="max-width: 30%;">
         <div class="mb-3">
-          <label for="username" class="form-label">Nom d'utilisateur</label>
+          <label for="username" class="form-label">{{ index .tab "username" }}</label>
           <input type="text" class="form-control" id="username" name="username" required autofocus>
         </div>
         <div class="mb-3">
-          <label for="password" class="form-label">Mot de passe</label>
+          <label for="password" class="form-label">{{ index .tab "password" }}</label>
           <input type="password" class="form-control" id="password" name="password" required>
         </div>
-        <button type="submit" class="btn btn-connexion w-100">Connexion</button>
+        <button type="submit" class="btn btn-connexion w-100">{{ index .tab "submit" }}</button>
         {{ if .Error }}
           <div class="alert alert-danger error-animated text-center mt-3 mb-2 py-2" role="alert">
             {{ .Error }}
           </div>
         {{ end }}
         <div class="text-center mt-3">
-          <a href="forgot-password" class="forgot-link text-decoration-none text-body fw-semibold">Mot de passe oublié ?</a>
+          <a href="forgot-password" class="forgot-link text-decoration-none text-body fw-semibold">{{ index .tab "forgotPassword" }}</a>
         </div>
       </form>
     </div>
