--- a/pkg/admin/gui/front_end/html/header.html
+++ b/pkg/admin/gui/front_end/html/header.html
@@ -24,9 +24,9 @@
         <li class="nav-item"><a href="home" class="nav-link text-white">Part.4</a></li>
       </ul>
       <ul class="nav nav-pills me-5">
-        <li class="nav-item"><a href="home" class="nav-link text-white d-flex align-items-center"><i class="bi bi-person-fill fs-6 me-2"></i>Utilisateur</a></li>
-        <li class="nav-item"><a href="home" class="nav-link text-white">À propos</a></li>
-        <li class="nav-item"><a href="logout" class="nav-link text-white">Déconnexion</a></li>
+        <li class="nav-item"><a href="home" class="nav-link text-white d-flex align-items-center"><i class="bi bi-person-fill fs-6 me-2"></i>{{ index .username }}</a></li>
+        <li class="nav-item"><a href="home" class="nav-link text-white">{{ index .tab "about" }}</a></li>
+        <li class="nav-item"><a href="logout" class="nav-link text-white">{{ index .tab "logout" }}</a></li>
       </ul>
       <ul class="nav nav-pills">
        {{ template "multi_language" . }}
