--- a/pkg/admin/gui/front_end/html/home_page.html
+++ b/pkg/admin/gui/front_end/html/home_page.html
@@ -24,7 +24,7 @@
           </a>
         </div>
         <div class="col-sm-4">
-          <a href="user_management.html" class="text-decoration-none text-dark">
+          <a href="user_management" class="text-decoration-none text-dark">
             <div class="card text-center p-3">
               <i class="bi bi-person-fill fs-2"></i>
               <div>{{ index .tab "user_management" }}</div>
