--- a/pkg/admin/gui/front_end/html/login_page.html
+++ b/pkg/admin/gui/front_end/html/login_page.html
@@ -3,6 +3,7 @@
   <head>
     <title>{{ index .tab "title" }}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="icon" type="image/png" href="/webui/static/assets/waarp_logo.png">
     <link rel="stylesheet" href="/webui/static/css/login_page.css">
 </head>
 
