--- a/pkg/admin/gui/front_end/html/user_management_page.html
+++ b/pkg/admin/gui/front_end/html/user_management_page.html
@@ -3,9 +3,66 @@
 <link rel="stylesheet" href="/webui/static/css/user_management_page.css">
 {{ end }}
 
+
 {{ define "content" }}
     <h2>{{ index .tab "title" }}</h2>
     <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
+    
+    {{ if contains .myPermission.Users "r" }}
+        <button class="btn-filter btn-primary mb-3" type="button" data-bs-toggle="collapse" data-bs-target="#filterCollapse" aria-expanded="false" aria-controls="filterCollapse">
+        {{ index .tab "filter" }}
+        </button>
+        <div class="collapse" id="filterCollapse">
+        <form method="get" class="p-3 border rounded bg-light">
+            <label class="ms-3">{{ index .tab "sort" }}
+            <select name="orderAsc" class="form-select d-inline w-auto">
+                <option value="true">A → Z</option>
+                <option value="false">Z → A</option>
+            </select>
+            </label>
+            <label class="ms-3">{{ index .tab "limit" }}
+            <input type="number" name="limit" min="0" value="0" class="form-control d-inline w-auto">
+            </label>
+            <button type="submit" class="btn btn-success ms-3">{{ index .tab "apply" }}</button>
+        </form>
+        </div>
+        
+        <div class="row g-3 mb-4">
+            <div class="row g-3 mb-4">
+            {{ range .userPermissions }}
+                <div class="col-sm-4">
+                <div class="card text-center p-3">
+                    <i class="bi bi-person-fill fs-2"></i>
+                    <div><strong>{{ .Username }}</strong></div>
+                    <div>Permissions transfers: {{ .Permissions.Transfers }}</div>
+                    <div>Permissions servers: {{ .Permissions.Servers }}</div>
+                    <div>Permissions partners: {{ .Permissions.Partners }}</div>
+                    <div>Permissions rules: {{ .Permissions.Rules }}</div>
+                    <div>Permissions users: {{ .Permissions.Users }}</div>
+                    <div>Permissions administration: {{ .Permissions.Administration }}</div>
+                </div>
+                </div>
+            {{ end }}
+        </div>
+    </div>
+    {{ else }}
+        <div class="row g-3 mb-4">
+            <div class="row g-3 mb-4">
+                <div class="col-sm-4">
+                <div class="card text-center p-3">
+                    <i class="bi bi-person-fill fs-2"></i>
+                    <div><strong>{{ .username }}</strong></div>
+                    <div>Permissions transfers: {{ .myPermission.Transfers }}</div>
+                    <div>Permissions servers: {{ .myPermission.Servers }}</div>
+                    <div>Permissions partners: {{ .myPermission.Partners }}</div>
+                    <div>Permissions rules: {{ .myPermission.Rules }}</div>
+                    <div>Permissions users: {{ .myPermission.Users }}</div>
+                    <div>Permissions administration: {{ .myPermission.Administration }}</div>
+                </div>
+                </div>
+            </div>
+        </div>
+    {{ end }}
 {{ end }}
 
 {{ define "user_management_page" }}
