change/link of partner management page

--- a/pkg/admin/gui/front_end/html/home_page.html
+++ b/pkg/admin/gui/front_end/html/home_page.html
@@ -56,7 +56,7 @@
           </a>
         </div>
         <div class="col-sm-4">
-          <a href="remote_partner_management.html" class="text-decoration-none text-dark">
+          <a href="partner_management" class="text-decoration-none text-dark">
             <div class="card text-center p-3">
               <i class="bi-person-check-fill fs-2"></i>
               <div>{{ index .tab "remote_partner_management" }}</div>
