--- a/pkg/admin/gui/front_end/html/user_management_page.html
+++ b/pkg/admin/gui/front_end/html/user_management_page.html
@@ -1,6 +1,7 @@
 {{ define "head" }}
 <title>{{ index .tab "title" }}</title>
 <link rel="stylesheet" href="/webui/static/css/user_management_page.css">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 <script src="/webui/static/javaScript/user_management_page.js"></script>
 {{ end }}
 
@@ -28,11 +29,17 @@
                 </div>
                 <div class="form-input">
                     <label class="col-form-label mt-2">{{ index .tab "passwordStr" }} :</label>
-                    <input type="password" id="newUserPassword" class="form-control" required>
+                    <div class="input-group">
+                        <input type="password" id="newUserPassword_{{ .ID }}" class="form-control" required>
+                        <button class="btn btn-outline-secondary eye-button" type="button" onclick="eyePassword('newUserPassword_{{ .ID }}', this)"><i class="far fa-eye-slash"></i></button>
+                    </div>
                 </div>
                 <div class="form-input">
                     <label class="col-form-label mt-2">{{ index .tab "passwordConfirmStr" }} :</label>
-                    <input type="password" id="newUserPasswordConfirm" name="newUserPassword" class="form-control" required>
+                    <div class="input-group">
+                        <input type="password" id="newUserPasswordConfirm_{{ .ID }}" name="newUserPassword" class="form-control" required>
+                        <button class="btn btn-outline-secondary eye-button" type="button" onclick="eyePassword('newUserPasswordConfirm_{{ .ID }}', this)"><i class="far fa-eye-slash"></i></button>
+                    </div>
                 </div>
                 <div class="mt-3 mb-3"><strong>{{ index .tab "permissions" }} :</strong></div>
                 <div class="form-group mt-2">
@@ -137,62 +144,66 @@
     {{ end }}
 
     {{ if contains .myPermission.Users "r" }}
-        <button class="btn btn-primary mb-3 ms-2 btn-filter" type="button" data-bs-toggle="collapse" data-bs-target="#filterCollapse" aria-expanded="false" aria-controls="filterCollapse">
+        <button class="btn btn-primary mb-3 ms-1-5 btn-filter" type="button" data-bs-toggle="collapse" data-bs-target="#filterCollapse" aria-expanded="false" aria-controls="filterCollapse">
         {{ index .tab "filter" }}
         </button>
         <div class="collapse" id="filterCollapse">
         <form method="get" class="p-3 border rounded bg-light">
             <label class="ms-3">{{ index .tab "sort" }}
             <select name="orderAsc" class="form-select d-inline w-auto">
-                <option value="true">A → Z</option>
-                <option value="false">Z → A</option>
+                <option value="true" {{ if .filter.OrderAsc }}selected{{ end }}>A → Z</option>
+                <option value="false" {{ if not .filter.OrderAsc }}selected{{ end }}>Z → A</option>
             </select>
             </label>
             <label class="ms-3">{{ index .tab "limit" }}
             <select name="limit" class="form-select d-inline w-auto">
                 <option value="0" disabled selected>--</option>
-                <option value="5">5</option>
-                <option value="10">10</option>
-                <option value="15">15</option>
-                <option value="25">25</option>
-                <option value="50">50</option>
+                <option value="5" {{ if eq .filter.Limit 5 }}selected{{ end }}>5</option>
+                <option value="10" {{ if eq .filter.Limit 10 }}selected{{ end }}>10</option>
+                <option value="15" {{ if eq .filter.Limit 15 }}selected{{ end }}>15</option>
+                <option value="20" {{ if eq .filter.Limit 20 }}selected{{ end }}>20</option>
+                <option value="25" {{ if eq .filter.Limit 25 }}selected{{ end }}>25</option>
             </select>
             </label>
             <label class="ms-3">{{ index .tab "permissions" }}: 
             <select id="permissions" name="permissions" class="form-select d-inline w-auto">
-                <option value="" selected>--</option>
-                <option value="filterPermissionsTransfers">{{ index .tab "transfers" }}</option>
-                <option value="filterPermissionsServers">{{ index .tab "servers" }}</option>
-                <option value="filterPermissionsPartners">{{ index .tab "partners" }}</option>
-                <option value="filterPermissionsRules">{{ index .tab "rules" }}</option>
-                <option value="filterPermissionsUsers">{{ index .tab "users" }}</option>
-                <option value="filterPermissionsAdministration">{{ index .tab "administration" }}</option>
+                <option value="" {{ if eq .filter.Permissions "" }}selected{{ end }}>--</option>
+                <option value="filterPermissionsTransfers" {{ if eq .filter.Permissions "filterPermissionsTransfers" }}selected{{ end }}>{{ index .tab "transfers" }}</option>
+                <option value="filterPermissionsServers" {{ if eq .filter.Permissions "filterPermissionsServers" }}selected{{ end }}>{{ index .tab "servers" }}</option>
+                <option value="filterPermissionsPartners" {{ if eq .filter.Permissions "filterPermissionsPartners" }}selected{{ end }}>{{ index .tab "partners" }}</option>
+                <option value="filterPermissionsRules" {{ if eq .filter.Permissions "filterPermissionsRules" }}selected{{ end }}>{{ index .tab "rules" }}</option>
+                <option value="filterPermissionsUsers" {{ if eq .filter.Permissions "filterPermissionsUsers" }}selected{{ end }}>{{ index .tab "users" }}</option>
+                <option value="filterPermissionsAdministration" {{ if eq .filter.Permissions "filterPermissionsAdministration" }}selected{{ end }}>{{ index .tab "administration" }}</option>
             </select>
             <select id="permissionsType" name="permissionsType" class="form-select d-inline w-auto">
-                <option value="" selected>--</option>
-                <option value="permissionsMin">Min &lt </option>
-                <option value="permissionsEq">{{ index .tab "equal" }} =</option>
-                <option value="permissionsMax">Max &gt</option>
+                <option value="" {{ if eq .filter.PermissionsType "" }}selected{{ end }}>--</option>
+                <option value="permissionsMin" {{ if eq .filter.PermissionsType "permissionsMin" }}selected{{ end }}>Min &lt</option>
+                <option value="permissionsEq" {{ if eq .filter.PermissionsType "permissionsEq" }}selected{{ end }}>{{ index .tab "equal" }} =</option>
+                <option value="permissionsMax" {{ if eq .filter.PermissionsType "permissionsMax" }}selected{{ end }}>Max &gt</option>
             </select>
             <select id="permissionsValue" name="permissionsValue" class="form-select d-inline w-auto">
-                <option value="" selected>--</option>
-                <option value="---">{{ index .tab "none" }}</option>
-                <option value="r--">R--</option>
-                <option value="rw-">RW-</option>
-                <option value="rwd">RWD</option>
+                <option value="" {{ if eq .filter.PermissionsValue "" }}selected{{ end }}>--</option>
+                <option value="---" {{ if eq .filter.PermissionsValue "---" }}selected{{ end }}>{{ index .tab "none" }}</option>
+                <option value="r--" {{ if eq .filter.PermissionsValue "r--" }}selected{{ end }}>R--</option>
+                <option value="rw-" {{ if eq .filter.PermissionsValue "rw-" }}selected{{ end }}>RW-</option>
+                <option value="rwd" {{ if eq .filter.PermissionsValue "rwd" }}selected{{ end }}>RWD</option>
             </select>
             </label>
             <button id="applyBtn" type="submit" class="btn btn-success ms-3">{{ index .tab "apply" }}</button>
+            <button id="resetBtn" type="button" class="btn btn-secondary ms-1" onclick="window.location='user_management'">{{ index .tab "reset" }}</button>
         </form>
         </div>
         <nav class="navbar navbar-light bg-light">
-            <form method="get" class="d-flex ms-auto">
-                {{ if not .userFound }}
+            <form method="get" class="d-flex ms-auto position-relative" onsubmit="return true">
+                {{ if eq .userFound "false" }}
                     <div class="invalid-feedback d-block mt-2">{{ index .tab "userNotFound" }}</div>
+                {{ else if eq .userFound "true" }}
+                    <button id="resetBtn" type="button" class="btn btn-secondary me-2 reset-btn" onclick="window.location='user_management'"><i class="bi bi-x"></i></button>
                 {{ end }}
-            <input class="navbar-user form-control {{ if not .userFound }}is-invalid{{ end }}" type="search" placeholder="{{ index .tab "search" }}" name="search">
+            <input class="navbar-user form-control {{ if eq .userFound "false" }}is-invalid{{ end }}" type="search" placeholder="{{ index .tab "search" }}" name="search" id="searchUser" autocomplete="off">
             <button class="btn btn-primary ms-2 btn-navbar" type="submit">{{ index .tab "search" }}</button>
-        </form>
+            <ul id="autocomplete" class="list-group"></ul>
+            </form>
         </nav>
 
         <table class="table table-sm align-middle mb-4 rounded-3 mt-3">
@@ -244,11 +255,17 @@
                             </div>
                             <div class="form-input">
                                 <label class="col-form-label mt-2">{{ index $.tab "passwordStr" }} :</label>
-                                <input type="password" id="editUserPassword" class="form-control">
+                                <div class="input-group">
+                                    <input type="password" id="editUserPassword_{{ .ID }}" class="form-control">
+                                    <button class="btn btn-outline-secondary eye-button" type="button" onclick="eyePassword('editUserPassword_{{ .ID }}', this)"><i class="far fa-eye-slash"></i></button>
+                                </div>
                             </div>
                             <div class="form-input">
                                 <label class="col-form-label mt-2">{{ index $.tab "passwordConfirmStr" }} :</label>
-                                <input type="password" id="editUserPasswordConfirm" name="editUserPassword" class="form-control">
+                                <div class="input-group">
+                                    <input type="password" id="editUserPasswordConfirm_{{ .ID }}" name="editUserPassword" class="form-control">
+                                    <button class="btn btn-outline-secondary eye-button" type="button" onclick="eyePassword('editUserPasswordConfirm_{{ .ID }}', this)"><i class="far fa-eye-slash"></i></button>
+                                </div>
                             </div>
                             <div class="title-perm mt-3 mb-3"><strong>{{ index $.tab "permissions" }} :</strong></div>
                                 <div class="form-group mt-2">
@@ -344,7 +361,7 @@
                                 </div>
                                 <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{{ index $.tab "close" }}</button>
-                                <button type="submit" class="btn btn-success ms-3" onclick="confirmPassword('editUserPassword', 'editUserPasswordConfirm', '{{ $.language }}')">{{ index $.tab "apply" }}</button>
+                                <button type="submit" class="btn btn-success ms-3" onclick="confirmPassword('editUserPassword_{{ .ID }}', 'editUserPasswordConfirm_{{ .ID }}', '{{ $.language }}')">{{ index $.tab "apply" }}</button>
                                 </div>
                             </form>
                             </div>
@@ -364,6 +381,19 @@
             {{ end }}
           </tbody>
         </table>
+        <form method="get">
+                <ul class="pagination">
+                    <input type="hidden" name="orderAsc" value="{{ .filter.OrderAsc }}">
+                    <input type="hidden" name="limit" value="{{ .filter.Limit }}">
+                    <input type="hidden" name="offset" value="{{ .filter.Offset }}">
+                    <input type="hidden" name="permissions" value="{{ .filter.Permissions }}">
+                    <input type="hidden" name="permissionsType" value="{{ .filter.PermissionsType }}">
+                    <input type="hidden" name="permissionsValue" value="{{ .filter.PermissionsValue }}">
+                    <li class="page-item {{ if .filter.DisablePrevious }}disabled{{ end }}"><button class="page-link" name="previous" type="submit" value="true">{{ index .tab "previous" }}</button></li>
+                    <li class="page-item"><button class="page-link disabled">{{ .filter.Offset }}</button></li>
+                    <li class="page-item {{ if .filter.DisableNext }}disabled{{ end }}"><button class="page-link" name="next" type="submit" value="true">{{ index .tab "next" }}</button></li>
+                </ul>
+        </form>
     </div>
     {{ else }}
     <div class="row justify-content-center mb-4">
