--- a/pkg/admin/gui/front_end/html/partner_management_page.html
+++ b/pkg/admin/gui/front_end/html/partner_management_page.html
@@ -17,7 +17,7 @@
         {{ index .tab "addPartnerTitle" }}
         </button>
         <div class="modal fade" id="addPartnerModal" tabindex="-1" aria-labelledby="addPartnerModalLabel" aria-hidden="true">
-          <div class="modal-dialog">
+          <div class="modal-dialog modal-lg">
               <div class="modal-content">
               <form method="get" class="p-3 border rounded bg-light">
               <div class="modal-header">
@@ -32,9 +32,9 @@
               </div>
               <hr class="mt-2" style="border-top: 1px solid #ababab;">
               <div class="form-input">
-                <label class="col-form-label">{{ index .tab "protocol" }} :</label>
+                <label class="col-form-label">{{ index .tab "protocol" }} :</label><i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocol" }}"></i>
                 <select name="addPartnerProtocol" id="addPartnerProtocol" class="form-select partner-protocol-select" required>
-                  <option value="" disabled selected>Select your protocol</option>
+                  <option value="" disabled selected>{{ index .tab "selectProto" }}</option>
                   <option value="r66">R66</option>
                   <option value="r66-tls">R66-TLS</option>
                   <option value="sftp">SFTP</option>
@@ -48,12 +48,12 @@
               </div>
               <hr class="mt-2" style="border-top: 1px solid #ababab;">
               <div class="form-input">
-                  <label class="col-form-label">{{ index .tab "address" }} ({{ index .tab "host" }}) :</label>
+                  <label class="col-form-label">{{ index .tab "address" }} ({{ index .tab "host" }}) :</label><i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipHost" }}"></i>
                   <input type="text" name="addPartnerHost" class="form-control" required>
               </div>
               <hr class="mt-2" style="border-top: 1px solid #ababab;">
-              <div class="form-input">
-                  <label class="col-form-label">{{ index .tab "address" }} ({{ index .tab "port" }}) :</label>
+                <div class="form-input">
+                    <label class="col-form-label">{{ index .tab "address" }} ({{ index .tab "port" }}) :</label><i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipPort" }}"></i>
                   <input type="text" name="addPartnerPort" class="form-control" required>
               </div>
               {{ template "addR66" . }}
@@ -186,37 +186,16 @@
                       <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                  {{ $lenRange := len .ProtoConfig }}
-                  {{ $count := 0 }}
-                  {{ range $key, $value := .ProtoConfig }}
-                    {{ if ne $key "serverPassword" }}
-                      <div class="form-group mt-4">
-                        <label class="col-form-label me-3">{{$key}} :</label>
-                        {{ if isArray $value }}
-                        <div class="d-flex flex-column flex-grow-1">
-                          {{ range $index, $v := $value }}
-                            <input type="text" class="form-control-plaintext mb-2" id="input_{{$key}}_{{$index}}" name="{{$key}}_{{$index}}" value="{{$v}}" readonly>
-                          {{ end }}
-                        </div>
-                        {{ else if isBool $value }}
-                          <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" name="{{$key}}" id="{{$key}}_true" value="true" {{ if $value }}checked{{ end }} disabled>
-                            <label class="form-check-label" for="{{$key}}_true">True</label>
-                          </div>
-                          <div class="form-check form-check-inline">
-                            <input class="form-check-input" type="radio" name="{{$key}}" id="{{$key}}_false" value="false" {{ if not $value }}checked{{ end }} disabled>
-                            <label class="form-check-label" for="{{$key}}_false">False</label>
-                          </div>
-                        {{ else }}
-                          <input type="text" class="form-control-plaintext" value="{{$value}}" readonly>
-                        {{ end }}
-                      </div>
-                    {{ end }}
-                    {{ $count = (add $count 1) }}
-                    {{ if lt $count $lenRange }}
-                      <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
-                    {{ end }}
-                  {{ end }}
+                      {{ if or (eq .Protocol "r66") (eq .Protocol "r66-tls") }}
+                        {{ template "displayR66" (dict "tab" $.tab "ProtoConfig" .ProtoConfig) }}
+                      {{ end }}
+                      {{ if or (eq .Protocol "ftp") (eq .Protocol "ftps") }}
+                        {{ template "displayFtp" (dict "tab" $.tab "ProtoConfig" .ProtoConfig "TLSVersions" $.TLSVersions) }}
+                      {{ end }}
+                      {{ if or (eq .Protocol "pesit") (eq .Protocol "pesit-tls") }}
+                        {{ template "displayPesit" (dict "tab" $.tab "ProtoConfig" .ProtoConfig "TLSVersions" $.TLSVersions) }}
+                      {{ end }}
+                      {{ template "displaySftp" (dict "tab" $.tab "ProtoConfig" .ProtoConfig "KeyExchanges" $.KeyExchanges "Ciphers" $.Ciphers "MACs" $.MACs) }}
                     </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{{ index $.tab "close" }}</button>
@@ -227,6 +206,12 @@
               {{ end }}
               </td>
               <td class="text-end">
+                <a class="btn btn-outline-warning btn-sm me-1" href="partner_authentication" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="{{ index $.tab "tooltipPartnerAuthentication" }}">
+                  <i class="bi bi-shield-lock"></i>
+                </a>
+                <a class="btn btn-outline-info btn-sm me-1" href="remote_account_management" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="{{ index $.tab "tooltipRemoteAccountManagement" }}">
+                  <i class="bi bi-person-gear"></i>
+                </a>
                 {{ if contains $.myPermission.Partners "w" }}
                   <button class="btn btn-outline-primary btn-sm me-1" data-bs-toggle="modal" data-bs-target="#editPartnerModal_{{ .ID }}">
                   <i class="bi bi-pencil"></i>
@@ -247,7 +232,7 @@
                       </div>
                       <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
                       <div class="form-group mt-4">
-                        <label class="col-form-label">{{ index $.tab "protocol" }} :</label>
+                        <label class="col-form-label">{{ index $.tab "protocol" }} : <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipProtocol" }}"></i></label>
                         <select name="editPartnerProtocol" class="form-select partner-protocol-select" required>
                           <option value="r66" {{ if eq .Protocol "r66" }}selected{{ end }}>R66</option>
                           <option value="r66-tls" {{ if eq .Protocol "r66-tls" }}selected{{ end }}>R66-TLS</option>
@@ -262,18 +247,18 @@
                       </div>
                       <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
                       <div class="form-group mt-4">
-                          <label class="col-form-label">{{ index $.tab "address" }} ({{ index $.tab "host" }}) :</label>
+                          <label class="col-form-label">{{ index $.tab "address" }} ({{ index $.tab "host" }}) : <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipHost" }}"></i></label>
                           <input type="text" name="editPartnerHost" class="form-control" required value="{{ .Address.Host }}">
                       </div>
                       <hr class="mt-2 mb-4" style="border-top: 1px solid #ababab;">
                       <div class="form-group mt-4">
-                          <label class="col-form-label">{{ index $.tab "address" }} ({{ index $.tab "port" }}) :</label>
+                          <label class="col-form-label">{{ index $.tab "address" }} ({{ index $.tab "port" }}) : <i class="bi bi-info-circle ms-1" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-title="{{ index $.tab "tooltipPort" }}"></i></label>
                           <input type="text" name="editPartnerPort" class="form-control" required value="{{ .Address.Port }}">
                       </div>
                       {{ template "editR66" (dict "tab" $.tab "ProtoConfig" .ProtoConfig) }}
-                      {{ template "editFtp" (dict "tab" $.tab "ProtoConfig" .ProtoConfig) }}
-                      {{ template "editPesit" (dict "tab" $.tab "ProtoConfig" .ProtoConfig) }}
-                      {{ template "editSftp" (dict "tab" $.tab "ProtoConfig" .ProtoConfig) }}
+                      {{ template "editFtp" (dict "tab" $.tab "ProtoConfig" .ProtoConfig "TLSVersions" $.TLSVersions) }}
+                      {{ template "editPesit" (dict "tab" $.tab "ProtoConfig" .ProtoConfig "TLSVersions" $.TLSVersions) }}
+                      {{ template "editSftp" (dict "tab" $.tab "ProtoConfig" .ProtoConfig "KeyExchanges" $.KeyExchanges "Ciphers" $.Ciphers "MACs" $.MACs) }}
                     </div>
                       <div class="modal-footer">
                           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">{{ index $.tab "close" }}</button>
